Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44644

Qt5: Settings Path is not set correctly on Linux

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.4.2
    • 5.3.2, 5.4.0
    • Core: Other
    • None
    • Linux
    • a659b4e56be9721389d28e212b4f4bcd393e6410

    Description

      When using qt.conf and the Settings Entry is not specified in qt.conf, create a QSettings using QSettings::SystemScope, and the settings are saved into the .conf file under the root directory "/". The .conf file should be created in the directory where the executable file is.

      With the example code below, the settings are saved in "/MyDir/Settings.conf" instead of "./MyDir/Settings.conf"

      QSettings settings(QSettings::SystemScope, "MyDir", "Settings");
      settings.setValue("editor/wrapMargin", 80);

      Please investigate.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            dongmei Dongmei Wang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes