fix default of SettingsPath when qt.conf is present

it's documented to fall back to Prefix if qt.conf is present but
Settings is not specified.

Task-number: QTBUG-44644
Change-Id: I8ef6659cbdad51b2fb3c1075ea6f0af4997117ed
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: a659b4e56be9721389d28e212b4f4bcd393e6410 https://github.com/qt/qtbase/commit/a659b4e56be9721389d28e212b4f4bcd393e6410